<resources>
    <string name="app_name">SignChatter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="psl">PSL</string>
    <string name="asl">ASL</string>
    <string name="dictionary">Dictionary</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Instructions</string>
    <string name="_1_stand_about_2_2_5m_6_8ft_away_from_the_camera_n2_perform_only_one_sign_per_video_and_make_sure_the_entire_sign_is_recorded_in_the_video_n3_make_sure_there_is_plenty_of_light_while_making_the_video_n4_ensure_there_isn_t_any_other_person_present_in_the_background_n5_videos_should_be_about_3_6_seconds_in_length">1. Stand about 2–2.5m (6–8ft) away from the camera. \n\n2. Perform only one sign per video and make sure the entire sign is recorded in the video. \n\n3. Make sure there is plenty of light while making the video \n\n4.Ensure there isn’t any other person present in the background. \n\n5. Videos should be about 3–6 seconds in length.</string>
    <string name="follow_these_instructions_for_better_predictions">Follow these Instructions for better predictions.</string>
    <string name="signchatter_is_the_world_s_first_sign_language_translation_app_that_takes_body_movement_into_account_while_detecting_and_translating_signs_hence_giving_more_accurate_translations_and_being_able_to_translate_a_lot_more_signs_than_singular_frame_based_sign_language_translation_apps_the_app_currently_supports_only_american_sign_language_but_support_for_other_languages_will_be_added_soon">SignChatter is the world’s first sign language translation app that takes body movement into account while detecting and translating signs hence, giving more accurate translations and being able to translate a lot more signs than singular-frame based sign language translation apps. The app currently supports only American Sign Language but support for other languages will be added soon.</string>
    <string name="getting_prediction">Getting Prediction....</string>
    <string name="tap_any_item_to_watch_tutorial">Tap any item to watch tutorial</string>
</resources>