<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gdsc.signchatter.Fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dictionary"
        android:name="com.gdsc.signchatter.Fragments.DictionaryFragment"
        android:label="@string/dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.gdsc.signchatter.Fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_instructions"
        android:name="com.gdsc.signchatter.Fragments.InstructionsFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instructions" />
</navigation>